TR-61162: hw9 fix